--- a/spec/fixtures/column_config.yml
+++ b/spec/fixtures/column_config.yml
@@ -7,10 +7,13 @@
   :headings:
   - ARK ID
   :requirement: required
+  :data_type: :ark
 - :attr: page_sequence
   :headings:
   - PAGE SEQUENCE
   :requirement: required
+  :unique: true
+  :data_type: :integer
 - :attr: filename
   :headings:
   - FILENAME
