--- a/data/structural_config.yml
+++ b/data/structural_config.yml
@@ -2,32 +2,36 @@
 :sheet_name: 'Structural'
 :sheet_position: 0
 :heading_type: 'row'
-:headings:
-  - :heading:     ARK ID
-    :requirement: :required
-    :repeating:   true
-    :data_type:   :ark
-  - :heading:     PAGE SEQUENCE
-    :requirement: :required
-    :repeating:   true
-    :data_type:   :integer
-  - :heading:     FILENAME
-    :requirement: :required
-    :repeating:   true
-    :data_type:   :string
-  - :heading:     VISIBLE PAGE
-    :requirement: :required
-    :repeating:   true
-    :data_type:   :string
-  - :heading:     TOC ENTRY
-    :requirement: false
-    :repeating:   true
-    :data_type:   :string
-  - :heading:     ILL ENTRY
-    :requirement: false
-    :repeating:   true
-    :data_type:   :string
-  - :heading:     NOTES
-    :requirement: false
-    :repeating:   true
-    :data_type:   :string
+:attributes:
+- :attr: ark_id
+  :headings:
+  - ARK ID
+  :requirement: required
+  :data_type: :ark
+- :attr: page_sequence
+  :headings:
+  - PAGE SEQUENCE
+  :requirement: required
+  :unique: true
+  :data_type: :integer
+- :attr: filename
+  :headings:
+  - FILENAME
+  :requirement: required
+- :attr: visible_page
+  :headings:
+  - VISIBLE PAGE
+  :requirement: required
+- :attr: toc_entry
+  :headings:
+  - TOC ENTRY
+  :multivalued: true
+  :value_sep: '|'
+- :attr: ill_entry
+  :headings:
+  - ILL ENTRY
+  :multivalued: true
+  :value_sep: '|'
+- :attr: notes
+  :headings:
+  - NOTES
