Fix case insensitivity bug

--- a/spec/fixtures/structural_config_lower_case_headings.yml
+++ b/spec/fixtures/structural_config_lower_case_headings.yml
@@ -24,9 +24,10 @@
   :requirement: required
 - :attr: toc_entry
   :headings:
-    - TOC Entry
+    - TOC ENTRY
   :multivalued: true
   :value_sep: '|'
+  :heading_required: true
 - :attr: ill_entry
   :headings:
     - ILL Entry
